VFS-833, update homepage content

--- a/rel/files/HOMEPAGE_HEADER.html
+++ b/rel/files/HOMEPAGE_HEADER.html
@@ -1,6 +1,9 @@
 <!-- =================================================================== -->
 <!-- copyright (C): 2014 ACK CYFRONET AGH                                -->
 <!-- Home sub-page in HTML.                                              -->
+<!-- The contents of this file will be prepended to home page.           -->
+<!-- The intention of this file is to allow customisation of the         -->
+<!-- homepage header.                                                    -->
 <!-- =================================================================== -->
 
 <div>
